<resources>
    <string name="app_name">Alpha</string>
    <string name="from">from</string>
    <string name="welcome">Welcome</string>
    <string name="we_happy_to_see_you_to_use_your_account_you_should_log_first">We happy to see you. To use your account, you should log in first. </string>
    <string name="mobile_number">Mobile number</string>
    <string name="mobile_number2">Mobile Number</string>
    <string name="send_otp">Sign In</string>
    <string name="send">Send</string>
    <string name="_91">+91</string>
    <string name="i_am_teacher">I am a teacher</string>
    <string name="i_am_student">I am a student</string>
    <string name="we_sent_you_code_on">OTP has been sent on </string>
    <string name="enter_your_OTP_code_here">Please enter the code to sign in</string>
    <string name="i_didnt_received_code">I didn’t received a code !</string>
    <string name="resend_code">Resend code</string>
    <string name="submit">Submit</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="email_address2">Email Address</string>
    <string name="institute_username">Institute username</string>
    <string name="username">Username</string>
    <string name="invalid">Invalid</string>
    <string name="uploaded">Uploaded</string>
    <string name="faculty">Department</string>
    <string name="stream">Branch</string>
    <string name="class_">Class</string>
    <string name="connection">Connection</string>
    <string name="share_post">Share Post</string>
    <string name="about">About</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="photo">Photo</string>
    <string name="upload_from_device">Upload from device</string>
    <string name="upload_report_card_file">Upload report card file</string>
    <string name="about_post">About post</string>
    <string name="share">Share</string>
    <string name="visible_to_connections">Visible to connections</string>
    <string name="profile_photo">Profile photo</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="birth_date">Birth Date</string>
    <string name="about_me">About me</string>
    <string name="view">View</string>
    <string name="personal_message">Personal message</string>
    <string name="group_message">Group message</string>
    <string name="assignment">Assignment</string>
    <string name="teaching_plan">Teaching plan</string>
    <string name="complaint_box">Complaint box</string>
    <string name="system_notifications">System notifications</string>
    <string name="exam">Exam</string>
    <string name="unblock">Unblock</string>
    <string name="activate_deactivate">Delete</string>
    <string name="change">Change</string>
    <string name="add_username">Create username</string>
    <string name="add_diary">Add Diary</string>
    <string name="edit_diary">Edit Diary</string>
    <string name="add_complaint">Add Complaint</string>
    <string name="change_username">Change Username</string>
    <string name="change_institute">Change Institute / Class</string>
    <string name="available">Available</string>
    <string name="change_faculty">Change Faculty</string>
    <string name="select_faculty">Select faculty</string>
    <string name="change_stream">Change Stream</string>
    <string name="select_stream">Select Stream</string>
    <string name="change_class">Change Class</string>
    <string name="select_class">Select Class</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_year">Select Year</string>
    <string name="select_language">Select Language</string>
    <string name="subject">Subject</string>
    <string name="subjects">Subjects</string>
    <string name="schedule_lecture_date_time">Schedule Lecture Date Time</string>
    <string name="schedule_lecture_time">Schedule Lecture time</string>
    <string name="selected_date_time">Selected date &amp; time</string>
    <string name="change_mobile_number">Change mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="more">more</string>
    <string name="read_more">read more...</string>
    <string name="sign_out">Sign Out</string>
    <string name="gender">Gender</string>
    <string name="blood_group">Blood Group</string>
    <string name="skills">Skills</string>
    <string name="information">Information</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="hobbies">Hobbies</string>
    <string name="bio">Bio</string>
    <string name="report_abuse">Report Abuse</string>
    <string name="report">Report</string>
    <string name="details">Details</string>
    <string name="post_details">Post Details</string>
    <string name="post_title_here">Post title here</string>
    <string name="note_title_here">Note title here</string>
    <string name="comments">Comments</string>
    <string name="request">Request</string>
    <string name="general">General</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="connect">Connect</string>
    <string name="setting">Setting</string>
    <string name="remove">Remove</string>
    <string name="message">Message</string>
    <string name="today">Today</string>
    <string name="clear_chat">Clear chat</string>
    <string name="mute_notification">Mute notification</string>
    <string name="block">Block</string>
    <string name="career_opportunity">Career Opportunity</string>
    <string name="entrance_exam">Entrance Exam</string>
    <string name="syllabus">Syllabus</string>
    <string name="photos">Photos</string>
    <string name="education_loan_details">Education loan details:</string>
    <string name="apply_on_the_below_links">Apply on the below links:</string>
    <string name="results">Results</string>
    <string name="faculties">Faculties</string>
    <string name="info">Info</string>
    <string name="faculty_stream">Faculty &amp; Stream</string>
    <string name="facilities">Facilities</string>
    <string name="gallery">Gallery</string>
    <string name="governance">Governance</string>
    <string name="placement">Placement</string>
    <string name="download_brochure">Download Brochure</string>
    <string name="environment">Environment</string>
    <string name="teaching">Teaching</string>
    <string name="staff">Staff</string>
    <string name="students_ratings">Students Ratings</string>
    <string name="streams">Streams</string>
    <string name="hide_fees">Hide fees</string>
    <string name="year">Year</string>
    <string name="fees">Fees</string>
    <string name="our_partners">Our Partners</string>
    <string name="selected_students">Selected Students</string>
    <string name="students">Students</string>
    <string name="_package">Package</string>
    <string name="selected_at">Selected at</string>
    <string name="about_us">About us</string>
    <string name="policy">Policy</string>
    <string name="dean">Dean</string>
    <string name="education">Education</string>
    <string name="todays">Today’s</string>
    <string name="upcoming">Upcoming</string>
    <string name="get_in">Get in</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set Time</string>
    <string name="set_days">Set days</string>
    <string name="class_teacher">Class Teacher</string>
    <string name="paid">Paid</string>
    <string name="date">Date</string>
    <string name="trip_details">Trip details:</string>
    <string name="total_students">Total students</string>
    <string name="managed_by">Managed by</string>
    <string name="snacks">Snacks</string>
    <string name="meal">Meal</string>
    <string name="uploaded_file">Uploaded file</string>
    <string name="name">Name</string>
    <string name="achievements">Achievements</string>
    <string name="all">All</string>
    <string name="news_paper">News Paper</string>
    <string name="story_books">Story Books</string>
    <string name="class_books">Class Books</string>
    <string name="help_to_sign_in">Help to sign in</string>
    <string name="change_role">Change Role</string>
    <string name="reservation">Reservation</string>
    <string name="exam_schedule">Exam Schedule</string>
    <string name="eligibility">Eligibility</string>
    <string name="title_otp">OTP</string>
    <string name="title_registration">Registration</string>
    <string name="title_home">Home</string>
    <string name="title_institute">Institute</string>
    <string name="title_career">Career</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_post">Post</string>
    <string name="title_settings">Settings</string>
    <string name="title_web_scan">Web Scan</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_diary">Diary</string>
    <string name="title_activity">Activity</string>
    <string name="title_rate">Rate</string>
    <string name="title_edit">Edit</string>
    <string name="title_blocked_people">Blocked people</string>
    <string name="title_manage_notifications">Manage Notifications</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_entrance_exam">Entrance\nExam</string>
    <string name="title_mack_exam">Mock Exam\n</string>
    <string name="title_education_loan">Education\nLoan</string>
    <string name="title_best_college">Best\nCollege</string>
    <string name="title_career_guidance">Career\nGuidance</string>
    <string name="title_timetable">Timetable</string>
    <string name="title_complaints">Complaints</string>
    <string name="title_assignment">Assignment</string>
    <string name="title_transport">Transport</string>
    <string name="title_culture_programs">Culture</string>
    <string name="title_culture_programs2">Culture Programs</string>
    <string name="title_canteen">Canteen</string>
    <string name="title_sport">Sport</string>
    <string name="title_report_card">Report card</string>
    <string name="title_online_exam">Online exam</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_class">Class</string>
    <string name="title_library">Library</string>
    <string name="title_saved">Saved</string>
    <string name="title_lecture">Lecture</string>
    <string name="title_my_institute">My Institute</string>
    <string name="title_favorite_colleges">Favorite colleges</string>
    <string name="title_student">Student</string>
    <string name="title_team_member">Team Member</string>
    <string name="title_fees">Fees</string>
    <string name="title_transport_details">Transport Details</string>
    <string name="title_track_bus">Track Bus</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_sponsors">Sponsors</string>
    <string name="teacher">Teacher</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="i_am_a">I am a</string>
    <string name="i_want_to_be">I want to be</string>
    <string name="enter_student_in_the_box">Enter “Student” in the box</string>
    <string name="you_can_change_your_role_to_student_or_teacher">You can change your role to student or teacher, If you are a student and your want to apply for the teacher to your institute your can apply from here.</string>
    <string name="this_post_will_be_deleted_permanently_from_your_account">This post will be deleted permanently from your account, do you want to delete?</string>
</resources>