<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_institute"
        android:icon="@drawable/icon_institute"
        android:title="@string/title_institute" />

    <item
        android:id="@+id/nav_career"
        android:icon="@drawable/icon_career"
        android:title="@string/title_career" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/icon_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/title_profile" />
</menu>