<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp">


        <View
            android:layout_width="60dp"
            android:layout_height="5dp"
            android:background="@drawable/bg_rounded_1"
            android:backgroundTint="@color/gray_color" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/are_you_sure"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/this_post_will_be_deleted_permanently_from_your_account"
            android:textColor="@color/gray_color"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_stroke"
                android:backgroundTint="@color/blue"
                android:gravity="center"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_stroke"
                android:gravity="center"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="18sp" />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>