<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp">


        <View
            android:layout_width="60dp"
            android:layout_height="5dp"
            android:background="@drawable/bg_rounded_1"
            android:backgroundTint="@color/gray_color" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/details"
            android:textColor="@color/black"
            android:textSize="22sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnReport"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/report"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBlock"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/block"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>