<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/bg_rounded_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp">


        <View
            android:layout_width="60dp"
            android:layout_height="5dp"
            android:background="@drawable/bg_rounded_1"
            android:backgroundTint="@color/gray_color" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/change_mobile_number"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/gray_color"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_rounded_1">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_91"
                android:textColor="@color/grey_light2"
                android:textSize="18sp" />


            <View
                android:id="@+id/view4"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/gray_color" />


            <EditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:digits="1234567890"
                android:hint="Enter mobile number"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textColorHint="@color/gray_light"
                android:textSize="18sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/red"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChange"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>